--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -69,7 +69,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ../../Test/Dockerfile
+          file: ../../Dockerfile
           push: false
           tags: ${{ env.IMAGE_URL }}
 
