--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -59,24 +59,24 @@ jobs:
       IMAGE_URL: test              # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
 
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - uses: actions/checkout@v3
         
-      - name: Preset Image Name
-        run: echo "IMAGE_URL=$(echo ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:$(echo ${{ github.sha }} | cut -c1-7) | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-
-      - name: Build and push Docker Image
-        uses: docker/build-push-action@v4
+      - name: Build the Docker image
+        working-directory: path
+        run: docker build . -t yborisovp/test-to-delete:latest
+        
+      - name: Log into Docker Hub
+        uses: docker/login-action@v2
         with:
-          context: .
-          file: ../../Dockerfile
-          push: false
-          tags: ${{ env.IMAGE_URL }}
-
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Push the images to Docker Hub
+        run: docker push yborisovp/test-to-delete
+        
       - name: Deploy Image to CapRrover
         uses: caprover/deploy-from-github@v1.1.2
         with:
           server: "${{ secrets.CAPROVER_SERVER }}"
           app: "${{ secrets.APP_NAME }}"
           token: "${{ secrets.APP_TOKEN }}"
-          image: ${{ env.IMAGE_URL }}
+          image: yborisovp/test-to-delete
