--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -50,16 +50,21 @@ jobs:
     runs-on: ubuntu-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
     steps:
-      - uses: actions/checkout@v2 
-      - name: Build the Docker image
-        working-directory: path
-        run: docker build . -t yborisovp/test-to-delete:latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
         
       - name: Log into Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: yborisovp/test-to-delete:latest
+          
       - name: Push the images to Docker Hub
         run: docker push yborisovp/test-to-delete
         
